Fix website contrast

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@
 }
 
 .btn-blu {
-    color: #003E80;
+    background-color: #003E80;
 }
 
 .blue-font {
